# velox

./: .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  run_backtest.py  startuplocal.md
api/: main.py
core/: engine.py  events.py  execution.py  portfolio.py  risk.py
dashboard/: Dockerfile  package-lock.json  package.json
dashboard/src/: App.jsx  index.css
data/: base.py  cache.py  historical.py
research/: tearsheet.py  test_momentum_periods.py  tune_momentum.py  tune_momentum_stage2.py  visualizer.py
research/output/: ml_signal_equity_20260312_011509.csv  ml_signal_equity_20260312_100420.csv  ml_signal_equity_20260312_101216.csv  ml_signal_equity_20260312_102359.csv  ml_signal_equity_20260312_102751.csv  ml_signal_equity_20260312_103717.csv  ml_signal_equity_20260312_164953.csv  ml_signal_equity_20260312_170113.csv  ml_signal_equity_20260312_171454.csv  ml_signal_equity_20260312_172904.csv  ml_signal_equity_20260313_184225.csv  ml_signal_equity_20260313_184910.csv  ml_signal_equity_20260313_185301.csv  ml_signal_equity_20260313_185658.csv  ml_signal_equity_20260313_190010.csv  ml_signal_equity_20260313_202935.csv  ml_signal_equity_20260313_203232.csv  ml_signal_equity_20260313_211736.csv  ml_signal_equity_20260313_212229.csv  ml_signal_tearsheet_20260312_011509.txt  ml_signal_tearsheet_20260312_100420.txt  ml_signal_tearsheet_20260312_101216.txt  ml_signal_tearsheet_20260312_102359.txt  ml_signal_tearsheet_20260312_102751.txt  ml_signal_tearsheet_20260312_103717.txt  (+27 more)
signals/: ml_signal.py  momentum.py  pairs.py  regime.py
