[project]
name = "velox"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.135.1",
    "hmmlearn>=0.3.3",
    "lightgbm>=4.6.0",
    "numpy>=2.4.3",
    "pandas>=3.0.1",
    "pyarrow>=23.0.1",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.2",
    "scikit-learn>=1.8.0",
    "statsmodels>=0.14.6",
    "uvicorn>=0.41.0",
    "yfinance>=1.2.0",
]
